--- a/.github/workflows/visual-regression.yml
+++ b/.github/workflows/visual-regression.yml
@@ -38,7 +38,7 @@ jobs:
           pip install pipenv
           pipenv install --dev
           npm install
-          pipenv run playwright install-deps
+          pipenv run playwright install && pipenv run playwright install-deps
 
       - name: Start app for screenshots
         run: |
