--- a/.github/workflows/visual-regression.yml
+++ b/.github/workflows/visual-regression.yml
@@ -66,9 +66,7 @@ jobs:
 
       - name: Run visual regression tests
         run: |
-          pipenv run pytest tests/regression.py -v \
-            --browser=${{ matrix.browser }} \
-            --device=${{ matrix.device }} \
+          pipenv run pytest tests/regression_test.py -m "${{ matrix.viewport }} and ${{ matrix.browser }}" -v \
             --tb=short
         continue-on-error: false
         id: tests
