--- a/.github/workflows/update-golden-images.yml
+++ b/.github/workflows/update-golden-images.yml
@@ -83,7 +83,7 @@ jobs:
         uses: actions/cache/save@v4
         with:
           path: tests/golden/
-          key: golden-images-main-${{ matrix.browser }}-${{ matrix.device }}
+          key: golden-images-main-${{ matrix.browser }}-${{ matrix.device }}-${{ github.run_number }}
 
       - name: Upload golden images as backup artifact
         uses: actions/upload-artifact@v4
