FIX - Cache key (#118)
* Added github run number to cache key to avoid collision

* Now tests run in a single job, avoiding race conditions

* Removed unused variables

--- a/.github/workflows/update-golden-images.yml
+++ b/.github/workflows/update-golden-images.yml
@@ -52,12 +52,11 @@ jobs:
         run: |
           pip install pipenv
           pipenv install --dev
-          npm install
+          npm install --silent --no-fund --no-audit
           pipenv run playwright install && pipenv run playwright install-deps
 
       - name: Start app for screenshots
         run: |
-          export DEVELOPMENT_MODE=1
           pipenv run invoke update-docs
           pipenv run invoke site
           pipenv run invoke post-process
@@ -83,7 +82,7 @@ jobs:
         uses: actions/cache/save@v4
         with:
           path: tests/golden/
-          key: golden-images-main-${{ matrix.browser }}-${{ matrix.device }}
+          key: golden-images-main-${{ matrix.browser }}-${{ matrix.device }}-${{ github.run_number }}
 
       - name: Upload golden images as backup artifact
         uses: actions/upload-artifact@v4
