All golden images are now generated in a single step and stored in a shared cache folder using a static key, allowing visual tests to retrieve them easily

--- a/.github/workflows/update-golden-images.yml
+++ b/.github/workflows/update-golden-images.yml
@@ -4,30 +4,10 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:
-    inputs:
-      browsers:
-        description: 'Browsers (comma-separated: chromium,firefox,webkit)'
-        required: true
-        default: 'chromium,firefox,webkit'
-      devices:
-        description: 'Devices (comma-separated: desktop,mobile)'
-        required: true
-        default: 'desktop,mobile'
-      pages:
-        description: 'Pages (comma-separated or "all")'
-        required: false
-        default: 'all'
 
 jobs:
   update-golden:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        browser: [chromium, firefox, webkit]
-        device: [desktop, mobile]
-      fail-fast: false
 
     steps:
       - name: Checkout code
@@ -65,29 +45,21 @@ jobs:
 
       - name: Generate golden images
         run: |
-          PAGES="${{ github.event.inputs.pages || 'all' }}"
-          BROWSERS="${{ github.event.inputs.browsers || 'chromium,firefox,webkit' }}"
-          DEVICES="${{ github.event.inputs.devices || 'desktop,mobile' }}"
-
-          ARGS="--update-golden --browsers ${{ matrix.browser }} --devices ${{ matrix.device }} --clean --verbose"
-          if [ "$PAGES" != "all" ]; then
-            ARGS="$ARGS --pages $PAGES"
-          fi
-
+          ARGS="--update-golden"
           pipenv run python update.py $ARGS
-          echo "Golden images generated for ${{ matrix.browser }}/${{ matrix.device }}"
+          echo "Golden images generated for chromium (all devices, all pages)"
           ls -lah tests/golden/
 
       - name: Save golden images to cache
         uses: actions/cache/save@v4
         with:
           path: tests/golden/
-          key: golden-images-main-${{ matrix.browser }}-${{ matrix.device }}
+          key: golden-images-main
 
       - name: Upload golden images as backup artifact
         uses: actions/upload-artifact@v4
         with:
-          name: golden-backup-${{ matrix.browser }}-${{ matrix.device }}-${{ github.run_number }}
+          name: golden-backup-${{ github.run_number }}
           path: tests/golden/
           retention-days: 90
 
@@ -101,8 +73,5 @@ jobs:
         run: |
           echo "# Golden Images Update Complete" >> $GITHUB_STEP_SUMMARY
           echo "**Triggered by:** @${{ github.actor }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Browsers:** ${{ github.event.inputs.browsers }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Devices:** ${{ github.event.inputs.devices }}" >> $GITHUB_STEP_SUMMARY
-          echo "**Pages:** ${{ github.event.inputs.pages }}" >> $GITHUB_STEP_SUMMARY
           echo "New golden images have been generated, cached, and backup artifacts uploaded (90-day retention)." >> $GITHUB_STEP_SUMMARY
           echo "Next visual regression test run will use these images as baseline."
