Improvement/update golden (#128)
* Stop the action if saving the cache fails

* Small change

* Remove update-docs

* Fix dev mode

--- a/.github/workflows/update-golden-images.yml
+++ b/.github/workflows/update-golden-images.yml
@@ -50,10 +50,17 @@ jobs:
           ls -lah tests/golden/
 
       - name: Save golden images to cache
+        id: save-cache
         uses: actions/cache/save@v4
         with:
           path: tests/golden/
           key: golden-images-main
+
+      - name: Fail if cache failed
+        if: steps.save-cache.outcome != 'success'
+        run: |
+          echo "Cache save failed!"
+          exit 1
 
       - name: Upload golden images as backup artifact
         uses: actions/upload-artifact@v4
