--- a/.github/workflows/visual-regression.yml
+++ b/.github/workflows/visual-regression.yml
@@ -24,6 +24,7 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: tests/golden/
+          key: golden-images-main-latest
           restore-keys: |
             golden-images-main-
 
