--- a/.github/workflows/visual-regression.yml
+++ b/.github/workflows/visual-regression.yml
@@ -24,11 +24,12 @@ jobs:
         uses: actions/cache/restore@v4
         with:
           path: tests/golden/
+          key: golden-images-main-latest
           restore-keys: |
             golden-images-main-
 
       - name: Fail if no golden images found
-        if: steps.golden-cache.outputs.cache-hit != 'true'
+        if: steps.golden-cache.outputs.cache-hit == ''
         run: |
           echo "Error: Golden images cache for main branch not found!"
           echo "You must run 'Update Golden Images' workflow on main first."
