Minify JS with Terser and add wrapper for npm build scripts

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build:css": "postcss $INPUT --output $OUTPUT --config postcss.config.js",
-    "build:html": "html-minifier-next --collapse-whitespace --remove-optional-tags --remove-redundant-attributes \"$INPUT\" -o \"$INPUT.min.html\" && mv \"$INPUT.min.html\" \"$INPUT\""
+    "build:html": "html-minifier-next --collapse-whitespace --remove-optional-tags --remove-redundant-attributes \"$INPUT\" -o \"$INPUT.min.html\" && mv \"$INPUT.min.html\" \"$INPUT\"",
+    "build:js": "terser $INPUT --output $OUTPUT --compress --mangle"
   },
   "repository": {
     "type": "git",
@@ -22,7 +23,8 @@
     "cssnano": "^7.0.7",
     "html-minifier-next": "^1.1.5",
     "postcss": "^8.5.6",
-    "postcss-cli": "^11.0.1"
+    "postcss-cli": "^11.0.1",
+    "terser": "^5.36.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^7.0.2"
