--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,6 +1,6 @@
-// For format details, see https://aka.ms/devcontainer.json. For config options, see the
-// README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
 {
+    // For format details, see https://aka.ms/devcontainer.json. For config options, see the
+    // README at: https://github.com/devcontainers/templates/tree/main/src/ubuntu
     "name": "Ubuntu",
     // Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
      "image": "mcr.microsoft.com/devcontainers/base:ubuntu-24.04",
@@ -9,7 +9,7 @@
     // "features": {},
     "features": {
         "ghcr.io/devcontainers-extra/features/apt-packages:1": {
-            "packages": "python3-dev,python3-pip,python-is-python3,bash-completion,optipng,jpegoptim,file,patchelf,ccache,supervisor"
+            "packages": "python3-dev,python3-pip,python-is-python3,python3-lxml,bash-completion,optipng,jpegoptim,file,patchelf,ccache,supervisor"
         },
         "ghcr.io/devcontainers-extra/features/bash-command:1": {
             "command": "python3 -m pip install --break invoke pipenv"
