--- a/Pipfile
+++ b/Pipfile
@@ -28,6 +28,7 @@ sphinx-inline-tabs = "==2023.4.21"
 ablog = "==0.11.6"
 sphinxcontrib-youtube = "==1.4.1"
 sphinx = "==7.4.7"
+sphinx-lint = "==1.0.2"
 sphinx-favicon = "==1.0.1"
 sphinx-sitemap = "==2.5.1"
 "sphinxcontrib.asciinema" = "*"
